# clipforge

./: .gitignore  MEMORY_BANK.md  README.md  dev.sh  index.html  package-lock.json  package.json
docs/: ARCHITECTURE.md  PRD.md  TASKS.md
release/: clipforge_macos.dmg
src/: App.tsx  tauri.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ExportDialog.tsx  MediaLibrary.tsx  MetadataPanel.tsx  RecordingControls.tsx  Timeline.tsx  TrimToolbar.tsx  VideoPreview.tsx
src/hooks/: useFileDrop.ts  useRecording.ts
src/store/: timelineStore.ts
src/styles/: index.css
