[package]
name = "clipforge"
version = "0.1.0"
description = "A desktop video editor built with Tauri"
authors = ["clipforge-dev"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

